style(darkmode): Make sure that the background is removed on mobile devices

--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -25,4 +25,10 @@
   .intro-section {
     background-image: image_url("darkmode-background");
   }
+
+  @media (min-width: 320px) and (max-width: 1025px) {
+    .intro-section {
+      background-image: none;
+    }
+  }
 }
